--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "stylelint": "13.12.0",
     "stylelint-config-htmlacademy": "0.1.4"
   },
-  "browserlist": [
+  "browserslist": [
     "last 2 version",
     "Firefox ESR"
   ]
