Подключает stylelint-order и stylelint-order-htmlacademy

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,5 +1,8 @@
 {
-  "extends": "stylelint-config-htmlacademy",
+  "extends": [
+    "stylelint-config-htmlacademy",
+    "stylelint-order-htmlacademy"
+    ],
 
   "rules": {
     "declaration-no-important": true,
