--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "postcss-import": "14.0.0",
     "postcss-url": "10.1.3",
     "stylelint": "13.12.0",
-    "stylelint-config-htmlacademy": "0.1.4"
-  },
-  "engines": {
-    "node": "14.17.3"
+    "stylelint-config-htmlacademy": "0.1.4",
+    "stylelint-order": "4.1.0",
+    "stylelint-order-htmlacademy": "2.0.3"
   },
   "browserslist": [
     "last 2 version",
     "Firefox ESR"
-  ]
+  ],
+  "engines": {
+    "node": "14.17.3"
+  }
 }
