--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -16,7 +16,7 @@ name: pages
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version}}
-        - run: npm ci
+        - run: npm i
         - run: npm run build
 
         uses: JamesIves/github-pages-deploy-action@4.1.4
