--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -12,11 +12,11 @@ jobs:
       matrix:
         node-version: [14.x]
     steps:
-      uses: actions/checkout@v2.3.1
-      uses: actions/setup-node@v1
+      - uses: actions/checkout@v2.3.1
+      - uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-      - run: npm i
+      - run: npm ci
       - run: npm run build
 
       uses: JamesIves/github-pages-deploy-action@4.1.4
