--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,12 +14,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.1
       - uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+        with:
+          node-version: ${{ matrix.node-version }}
       - run: npm ci
       - run: npm run build
 
-      uses: JamesIves/github-pages-deploy-action@4.1.4
-      with:
-        branch: gh-pages # The branch the action should deploy to.
-        folder: build # The folder the action should deploy.
+      - uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: build # The folder the action should deploy.
